# scripts

./: .gitignore  boilerplate
bt/: bio.bt  blkdiscard.bt  bt-kstack.sh  bt-timing-hist.sh  btrfs_inode.bt  chunk-alloc.bt  commit_txn.bt  compr-leak.bt  cow_lock_cost.bt  delayed_refs_callers.bt  drop_caches.bt  epipe.bt  extent_bits.bt  extent_lock_cost.bt  ffe.bt  ffe2.bt  flush_effectiveness.bt  flush_pipeline.bt  hardlink.bt  hot-groups.bt  readdir.bt  recow.bt  release-eb-folio.bt  release_eb.bt  subvol-mkdir.bt  tramp.bt  verity-exec.bt  xfs_inode.bt  xhci.bt
c/: atomic-update.c  chunk-write  chunk-write-shas  chunk-write.c  gen-frag.c  holepunch-write.c  holepunch-write.h  limits  limits.c  mount-by-fd.c  multi-open  multi-open.c  o_tmpfile.c  open-file.c  pgfault  pgfault.bt  pgfault.c  pwrite  pwrite.c  run-squota.sh  sign-ext  sign-ext.c  squota-demo  squota-demo.c  squota.c  unshare-mount-dev.c
drgn/: bad-btrfs-cache.py  clear_chunk_allocated.py  detect_allocation_gap_bug.py  dump-stacks.drgn  dump_chunk_allocated.py  dump_chunk_maps.py  dump_commit_root_dev_extents.py  dump_dev_extents_btree.py  fd-dpath.drgn  folio-invalidate-sim.py  free-space-cache.drgn  inspect-qgroups.py  qg-rsv.drgn  shared-extent-pages.drgn  show_allocator_view.py  untracked-cache2.py  verify_chunk_allocated.py
frag/: bg-dump.btrd  bg-frag.btrd  frag.sh  man-frag.sh  process-bg-frag.py  self-contained.sh  setup.sh  sort-stream.sh
rust/kernel-review-tool/: Cargo.toml  README.md  btrfs-config.toml  config.toml  net-config.toml
rust/kernel-review-tool/src/: main.rs
sh/: btrfs  fs  (+12 more)
(+323 files in other folders)
