[package]
name = "kernel-review-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
mail-parser = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
